<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.vsm1.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.vsm1.ui.gallery.SharesFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_shares" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.vsm1.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_ledger" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.vsm1.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_profit" />

    <fragment
        android:id="@+id/round2"
        android:name="com.example.vsm1.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_round2" />

    <fragment
        android:id="@+id/round1"
        android:name="com.example.vsm1.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_round1" />
    <fragment
        android:id="@+id/round3"
        android:name="com.example.vsm1.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_round3" />
    <fragment
        android:id="@+id/round4"
        android:name="com.example.vsm1.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_round4" />
    <fragment
        android:id="@+id/round5"
        android:name="com.example.vsm1.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_round5" />
</navigation>